<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="movies">Movies</string>
    <string name="movie">Movie</string>
    <string name="tv_shows">Tv Shows</string>
    <string name="tv_show">Tv Show</string>
    <string name="bookmark">Favorites</string>
    <string name="title">Title</string>
    <string name="deadline">Deadline</string>
    <string name="description">Description</string>
    <string name="release">Release</string>
    <string name="text_directed_by">Directed by</string>
    <string name="text_duration">Duration</string>
    <string name="text_rating">Rating</string>
    <string name="text_actors">Actors</string>
    <string name="text_description">Description</string>
    <string name="text_release">Release</string>
    <string name="welcome">Welcome</string>
    <string name="text_first_release">First Release</string>
    <string name="text_status">Status</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>