<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_movie"
        android:icon="@drawable/ic_baseline_movie"
        android:title="@string/movies"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_bookmarks"
        android:icon="@drawable/ic_baseline_bookmarks"
        android:title="@string/bookmark"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

</menu>